listStream support for filtering internal streams
